[package]
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
categories = ["multimedia::images"]
description = "Smart filter to remove Floyd-Steinberg dithering from paletted images"
documentation = "https://docs.rs/undither"
homepage = "https://lib.rs/undither"
license = "GPL-3.0+"
name = "undither"
readme = "README.md"
repository = "https://github.com/kornelski/undither.git"
version = "1.0.5"
edition = "2018"
keywords = ["dithering", "floyd-steinberg", "smart", "blur", "filter"]

[[bin]]
doc = false
name = "undither"
path = "src/bin.rs"
required-features = ["binary"]

[dependencies]
imgref = "1.6.1"
itertools = "0.9.0"
loop9 = "0.1.1"
rgb = "0.8.20"
vpsearch = "2.0.1"

[dependencies.lodepng]
optional = true
version = "3.0.0"

[features]
binary = ["lodepng"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
