[package]
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
categories = ["multimedia::images"]
description = "Smart filter to remove Floyd-Steinberg dithering from paletted images"
documentation = "https://docs.rs/undither"
homepage = "https://lib.rs/crates/undither"
license = "GPL-3.0+"
name = "undither"
readme = "README.md"
repository = "https://github.com/kornelski/undither.git"
version = "1.0.8"
edition = "2021"
keywords = ["dithering", "floyd-steinberg", "smart", "blur", "filter"]

[[bin]]
doc = false
name = "undither"
path = "src/bin.rs"
required-features = ["binary"]

[dependencies]
imgref = "1.10.0"
itertools = "0.12.0"
loop9 = "0.1.4"
rgb = "0.8.37"
vpsearch = "2.0.1"

[dependencies.lodepng]
optional = true
version = "3.9.1"

[features]
binary = ["dep:lodepng"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "passively-maintained" }
